--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3'
 services:
   nginx:
-    image: nginx:latest
+    build:
+      context: .
+      dockerfile: docker/nginx/nginx.Dockerfile
     container_name: myapp-nginx
     ports:
       - "8888:80"
-    volumes:
-      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - php
       - mysql
